--- a/package.json
+++ b/package.json
@@ -22,6 +22,5 @@
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
